--- a/views/greetingCreate.edge
+++ b/views/greetingCreate.edge
@@ -135,8 +135,7 @@ h1{
     </div>
 </div>
 <div class="row d-flex justify-content-center">
-        <input type="button" name="Save" value="Submit" onclick="sendGreetig()" class="submitinvitation btn btn-primary ">
-    
+        <input type="button" name="Save" value="Share" onclick="sendGreetig()" class="submitinvitation btn btn-primary ">
         </div>
 </div>
 <script>
