--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -206,7 +206,7 @@
             
             .navbar-toggler-icon{
                 color: snow;
-                background: dodgerblue;
+                background: snow;
                 border-radius: 50%;
             }
 
