--- a/views/signInUser.edge
+++ b/views/signInUser.edge
@@ -57,6 +57,12 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control col-12" name="password" id="exampleInputPassword1" placeholder="Password">
           </div>
+          <div class="col-md-12 mt-2">
+            <a href="/SignUpUser">
+              <h5>Dont't have an account, Create new account...</h5>
+            </a>
+          </div>
+        
           <div class="col-md-12">
           <button type="submit" class="updatebtn">Sign In</button>
         </div>
