--- a/views/signUpUser.edge
+++ b/views/signUpUser.edge
@@ -74,6 +74,11 @@
             <label for="exampleInputPassword1">Confirm Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm Password">
           </div>
+          <div class="col-md-12 mt-2">
+            <a href="/SignInUser">
+              <h5>Already have an account, Login Here</h5>
+            </a>
+          </div>
           <button type="submit" class="updatebtn">Sign Up</button>
       </form>
       </div>
