--- a/views/index.edge
+++ b/views/index.edge
@@ -191,7 +191,7 @@ crossorigin=""></script>
  
              <input type="button" onclick="setLocation()" class=" btn btn-outline-primary btn-block mt-2" value="Set Your Location">
  
-             <input type="button" name="Save" value="Submit" onclick="sendInvite()" class="submitinvitation btn btn-primary btn-block mt-3">
+             <input type="button" name="Save" value="Share" onclick="sendInvite()" class="submitinvitation btn btn-primary btn-block mt-3">
  
  
          </form>
@@ -381,7 +381,7 @@ crossorigin=""></script>
                      var http = new XMLHttpRequest();
                      var url = '/invitationCreate';
                      
-                     var params = 'title='+title+'&subtitle='+subtitle+'&content='+content+'&bg='+bgImg+'&lat='+Mlat+'&lng='+Mlng+'&dateTime='+dateTime+'&type='+type+'&nameFont='+nameFont+'&subFont='+suFont+'&bodyFont='+bodyFont;
+                     var params = 'title='+title+'&subtitle='+subtitle+'&content='+content+'&bg='+bgImg+'&lat='+Mlat+'&lng='+Mlng+'&dateTime='+dateTime+'&type='+type+'&nameFont='+nameFont+'&subFont='+subFont+'&bodyFont='+bodyFont;
  
                      http.open('POST', url, true);
  
