--- a/views/greeting.edge
+++ b/views/greeting.edge
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
   
-    <title>MeelIndia</title>
+    <title> MeelIndia Greeting : {{ greetings[0].title   }} </title>
     
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
   
