--- a/views/greetingCreate.edge
+++ b/views/greetingCreate.edge
@@ -79,7 +79,19 @@ h1{
         padding-top: 20px;
     }
     
-    
+    @media(max-width:522px)
+    {
+                
+        .headingmain
+        {
+            font-size: 50px;
+        }    
+        .subheadingmain
+        {
+            font-size: 25px;
+        }
+
+    }
 </style>
 <div class="">
     <div class="container-fluid">
