--- a/views/profileUser.edge
+++ b/views/profileUser.edge
@@ -15,7 +15,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap');
 
-
+    body{
+        font-family: 'play';
+    }
     .bg-primary1{
         background: #2B7E5F;
     }
@@ -184,8 +186,9 @@
             <div class="col-md-2"></div>
         </div>
         <div class="row">
+            <!--
             <div class="col-md-1"></div>
-            <div class="col-md-2">
+            <div class="col-md-2" style="">
                 <form  action="/updateUserImage" class="m-3" enctype="multipart/form-data" method="POST">
                     <input type="hidden" name="_id" value="{{ userData._id }}">
                     <input type="file" class="custom-file-input" name="profile_pic" id="customFile" onchange="this.form.submit()">
@@ -200,8 +203,8 @@
 
                         <div class="col-8 text-left header">
                             <div class="row">
-                                <input type="text" class="ytedit h4 col nameheading" name="fname" value="{{userData.fname}}"> 
-                                <input type="text" class="ytedit h4 col nameheading" name="lname" value="{{userData.lname}}">
+                                <input type="text" class="ytedit h4 col-12 nameheading" name="fname" value="{{userData.fname}}"> 
+                                <input type="text" class="ytedit h4 col-12 nameheading" name="lname" value="{{userData.lname}}">
                             </div> 
                             <p>
                                 <div class="row">
@@ -230,110 +233,117 @@
                         <input type="submit" class="updatebtn" value="Update" >
 
                     </div>
-        </div>
+            </div>
 
-        <div class="col-md-4 p-1 pt-3 pb-4 invitationsclass" style="margin-left:25px;">
-            
-            <h3 class="profile-services-header" style="text-align:center;font-weight:bold;text-transform:uppercase;">Invitations!</h3>
-            <hr>
+            -->
 
-            @each(dt in invitations)
-                        
-                        <div class="col-md-12">
-                                <div class="col-md-8 offset-md-2 mb-2 text-center">
-                                        <div class="d-flex justify-content-center">
-                                            <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
-                                            <input type="text" id="title" name="title" class="ytedit d-inline inputInvite text-center" value="https://meelindia.com/invitation?id={{dt._id}}" placeholder=""> 
-                                            <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-share" aria-hidden="true"></i></button>
-                                        </div>
-                                        <div class="d-flex justify-content-center">
-                                                <a class="socialbtn d-flex row" href="whatsapp://send?text=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                                                <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                                                <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
-                                                <a class="socialbtn d-flex row" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
-                                        </div>
-                                </div> 
-                                <div class="invite bg-light shadowme" id="inviteBody">
-                                    <img src="{{dt.bg}}" id="bgInvite" alt="">
-                                    <div class="dataInvite">
-                                        <form action="inviteUpdate" method="POST">
-                                        <h5 class="text-center" id="head">Celebrating</h5>
-                                        <input type="hidden" name="_id" value="{{dt._id}}">
-                                        
-                                            <input type="text" id="title" name="title" class="ytedit h4 inputInvite text-center" value="{{dt.title}}" placeholder="" style="font-family:{{ dt.nameFont}}"> 
-                                            <input type="text" id="subtitle" name="subtitle" class="ytedit p inputInvite text-center" value="{{ dt.subtitle }}" placeholder="" style="font-family:{{ dt.subFont}}"> 
-                                            <textarea rows="4" id="content" name = "content"  class="ytedit form-control p inputInvite text-center"  id="content" style="font-family:{{ dt.bodyFont}}">{{ dt.content}}</textarea><br>
-                                            <input type="datetime-local" class="ytedit form-control p inputInvite text-center" name="dateTime" id="dateTime"  value="{{dt.dateTime}}">
-                                            <input type="submit" class="btn btn-outline-primary btn-block btn-update" value="Update">
-                                        </form>
-                                        <form action="inviteDelete" method="POST">
-                                            <input type="hidden" name="_id" value="{{dt._id}}">
-                                            <input type="submit" value="Delete" class="btn btn-outline-danger btn-block mt-1">
-                                        </form>
-                                    </div>
-                                </div> 
-                              
-                          
-                        </div>
-                        <hr width="100%">
+                <div class="col-md-6 p-1 pt-3 pb-4 invitationsclass" style="margin-left:25px;">
+                    
+                    <h3 class="profile-services-header" style="text-align:center;font-weight:bold;text-transform:uppercase;">Invitations!</h3>
+                    <hr>
 
-                    @endeach
-
-
-
-        </div>
-
-        <div class="col-md-4 p-1 pt-3 pb-4" style="margin-left:25px;">
-            
-            <h3 class="profile-services-header" style="text-align:center;font-weight:bold;text-transform:uppercase;">Greetings!</h3>
-            <hr>
-
-            @each(dt in greetings)
-                        
-                        <div class="col-md-12">
-                            <div class="col-md-8 offset-md-2 mb-2 text-center">
-                                <div class="d-flex justify-content-center">
-                                    <input type="text" id="title" name="title" class="ytedit d-inline inputInvite text-center " value="https://meelindia.com/greeting?id={{dt._id}}" placeholder="">  
-                                    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-share" aria-hidden="true"></i></button>
-                                </div> 
-                                <div class="d-flex justify-content-center">
-                                    <a class="socialbtn d-flex row" href="whatsapp://send?text=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                                    <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
-                                    <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
-                                    <a class="socialbtn d-flex row" onclick='myFunction2("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
-                            </div>
-                            </div> 
-                        
-                                <div class="invite bg-light shadowme" id="inviteBody">
-                                    <img src="{{dt.bg}}" id="bgInvite" alt="">
-                                    <div class="dataInvite">
-                                        <form action="greetingUpdate" method="POST">
-                                            <h5 class="text-center" id="head"></h5>
-                                            <input type="hidden" name="_id" value="{{dt._id}}">
-                                            <input type="text" id="title" name="title" class="ytedit h4 inputInvite text-center" value="{{dt.title}}" placeholder="" style="font-family:{{ dt.nameFont}}"> 
-                                            <input type="text" id="subtitle" name="subtitle" class="ytedit p inputInvite text-center" value="{{ dt.subtitle }}" placeholder="" style="font-family:{{ dt.subFont}}"> 
-                                            <textarea rows="4" id="content" name = "content"  class="ytedit form-control p inputInvite text-center"  id="content" style="font-family:{{ dt.bodyFont}}">{{ dt.content}}</textarea><br>
-                                            <input type="submit" class="btn btn-outline-primary btn-block btn-update" value="Update">
-                                        </form>
-                                        <form action="greetingDelete" method="POST">
-                                            <input type="hidden" name="_id" value="{{dt._id}}">
-                                            <input type="submit" value="Delete" class="btn btn-outline-danger btn-block mt-1">
-                                        </form>
-                                    </div>
-                                </div> 
+                    @each(dt in invitations)
                                 
-                          
-                        </div>
+                                <div class="col-md-12 mt-3 mb-3">
+                                        <div class="col-md-8 offset-md-2 mb-2 text-center">
+                                                <div class="d-flex justify-content-center">
+                                                    <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
+                                                    <input type="text" id="title" name="title" class="ytedit d-inline inputInvite text-center" value="https://meelindia.com/invitation?id={{dt._id}}" placeholder=""> 
+                                                    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#"><i class="fa fa-bell" aria-hidden="true"></i></button>
+                                                <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-bell" aria-hidden="true"></i></button>
+                                                -->
+                                                </div>
+                                                <div class="d-flex justify-content-center">
+                                                        <a class="socialbtn d-flex row" href="whatsapp://send?text=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                                                        <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                                                        <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+                                                        <a class="socialbtn d-flex row" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
+                                                </div>
+                                        </div> 
+                                        <div class="invite bg-light shadowme" id="inviteBody">
+                                            <img src="{{dt.bg}}" id="bgInvite" alt="">
+                                            <div class="dataInvite">
+                                                <form action="inviteUpdate" method="POST">
+                                                <h5 class="text-center" id="head">Celebrating</h5>
+                                                <input type="hidden" name="_id" value="{{dt._id}}">
+                                                
+                                                    <input type="text" id="title" name="title" class="ytedit h4 inputInvite text-center" value="{{dt.title}}" placeholder="" style="font-family:{{ dt.nameFont}}"> 
+                                                    <input type="text" id="subtitle" name="subtitle" class="ytedit p inputInvite text-center" value="{{ dt.subtitle }}" placeholder="" style="font-family:{{ dt.subFont}}"> 
+                                                    <textarea rows="4" id="content" name = "content"  class="ytedit form-control p inputInvite text-center"  id="content" style="font-family:{{ dt.bodyFont}}">{{ dt.content}}</textarea><br>
+                                                    <input type="datetime-local" class="ytedit form-control p inputInvite text-center" name="dateTime" id="dateTime"  value="{{dt.dateTime}}">
+                                                    <input type="submit" class="btn btn-outline-primary btn-block btn-update" value="Update">
+                                                </form>
+                                                <form action="inviteDelete" method="POST">
+                                                    <input type="hidden" name="_id" value="{{dt._id}}">
+                                                    <input type="submit" value="Delete" class="btn btn-outline-danger btn-block mt-1">
+                                                </form>
+                                            </div>
+                                        </div> 
+                                    
+                                
+                                </div>
+                                
+                                <hr width="100%">
 
-                        <hr width="100%">
-                    @endeach
+                            @endeach
 
 
-        </div>
 
-        <div class="col-md-1"></div>
+                </div>
+
+                <div class="col-md-5 p-1 pt-3 pb-4" style="margin-left:25px;">
+                    
+                    <h3 class="profile-services-header" style="text-align:center;font-weight:bold;text-transform:uppercase;">Greetings!</h3>
+                    <hr>
+
+                    @each(dt in greetings)
+                                
+                                <div class="col-md-12 mt-3 mb-3">
+                                    <div class="col-md-8 offset-md-2 mb-2 text-center">
+                                        <div class="d-flex justify-content-center">
+                                            <input type="text" id="title" name="title" class="ytedit d-inline inputInvite text-center " value="https://meelindia.com/greeting?id={{dt._id}}" placeholder="">  
+                                        <!--    <button type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-primary" data-toggle="modal" data-target="#shareModal"><i class="fa fa-share" aria-hidden="true"></i></button>
+                                        -->
+                                        
+                                        </div> 
+                                        <div class="d-flex justify-content-center">
+                                            <a class="socialbtn d-flex row" href="whatsapp://send?text=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
+                                            <a class="socialbtn d-flex row" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                                            <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/greeting?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+                                            <a class="socialbtn d-flex row" onclick='myFunction2("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
+                                    </div>
+                                    </div> 
+                                
+                                        <div class="invite bg-light shadowme" id="inviteBody">
+                                            <img src="{{dt.bg}}" id="bgInvite" alt="">
+                                            <div class="dataInvite">
+                                                <form action="greetingUpdate" method="POST">
+                                                    <h5 class="text-center" id="head"></h5>
+                                                    <input type="hidden" name="_id" value="{{dt._id}}">
+                                                    <input type="text" id="title" name="title" class="ytedit h4 inputInvite text-center" value="{{dt.title}}" placeholder="" style="font-family:{{ dt.nameFont}}"> 
+                                                    <input type="text" id="subtitle" name="subtitle" class="ytedit p inputInvite text-center" value="{{ dt.subtitle }}" placeholder="" style="font-family:{{ dt.subFont}}"> 
+                                                    <textarea rows="4" id="content" name = "content"  class="ytedit form-control p inputInvite text-center"  id="content" style="font-family:{{ dt.bodyFont}}">{{ dt.content}}</textarea><br>
+                                                    <input type="submit" class="btn btn-outline-primary btn-block btn-update" value="Update">
+                                                </form>
+                                                <form action="greetingDelete" method="POST">
+                                                    <input type="hidden" name="_id" value="{{dt._id}}">
+                                                    <input type="submit" value="Delete" class="btn btn-outline-danger btn-block mt-1">
+                                                </form>
+                                            </div>
+                                        </div> 
+                                        
+                                
+                                </div>
+
+                                <hr width="100%">
+                                
+                            @endeach
+
+
+                </div>
+
         
-    </div>
+        </div>
 
 
     <!-- Modal -->
