--- a/views/signInUser.edge
+++ b/views/signInUser.edge
@@ -68,7 +68,7 @@
               </div>
               <div class="col-md-12 mt-2">
                 <a href="/FPUser">
-                  <h5>Forget Password...</h5>
+                  <h5>Forget Password Or Activate Account...</h5>
                 </a>
               </div>
         </form>
