--- a/views/layout/app.edge
+++ b/views/layout/app.edge
@@ -206,8 +206,12 @@
             
             .navbar-toggler-icon{
                 color: snow;
-                background: snow;
+                background: black;
+                display: none;
                 border-radius: 50%;
+            }
+            .appBarExtra{
+
             }
 
       }
@@ -313,18 +317,167 @@
 <div id="mySidenav" class="sidenav bg-dark text-light">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <hr><a href="/profileUser"><i class="fa fa-user-circle" aria-hidden="true"></i> &nbsp; Profile</a>
-  <hr><a href="/help"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Help & Support</a>
-  <hr><a href="/FPUser"><i class="fa fa-key" aria-hidden="true"></i> &nbsp;Password</a>
-  <hr><a href="/deactivateUserAcc"><i class="fa fa-ban" aria-hidden="true"></i> &nbsp;Deactivate </a>
+  <ul class="navbar-nav ml-4">
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp; Home</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/invitationCreate"> <i class="fa fa-envelope-open" aria-hidden="true"></i> &nbsp; Invitation</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/greetingCreate">  <i class="fa fa-envelope-open-o" aria-hidden="true"></i> &nbsp;Greeting</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/contact">  <i class="fa fa-phone" aria-hidden="true"></i> &nbsp; Contact</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/about">  <i class="fa fa-info" aria-hidden="true"></i> &nbsp; About</a>
+    </li>
+      
+    @if(!user)
+
+
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/SignUpUser">
+        <i class="fa fa-user" aria-hidden="true"></i> &nbsp;  Sign Up</a>
+    </li>
+
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/SignInUser">
+        <i class="fa fa-sign-in" aria-hidden="true"></i> &nbsp;  Sign In</a>
+    </li>
+
+    @endif
+
+    @if(user != "")
+    
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/logout">
+        <i class="fa fa-sign-out" aria-hidden="true"></i> &nbsp;  Sign out
+      </a>
+    </li>
+
+    @endif
+</ul>
+  <a href="/help"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Help & Support</a>
+  <a href="/FPUser"><i class="fa fa-key" aria-hidden="true"></i> &nbsp;Password</a>
+  <a href="/deactivateUserAcc"><i class="fa fa-ban" aria-hidden="true"></i> &nbsp;Deactivate </a>
 <hr>
 </div>
 
 <div id="mySidenav2" class="sidenav bg-dark text-light">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav2()">&times;</a>
   <hr><a href="/profileBusiness"> <i class="fa fa-user-circle" aria-hidden="true"></i> &nbsp;Profile</a>
+  <ul class="navbar-nav ml-4">
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp; Home</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/invitationCreate"> <i class="fa fa-envelope-open" aria-hidden="true"></i> &nbsp; Invitation</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/greetingCreate">  <i class="fa fa-envelope-open-o" aria-hidden="true"></i> &nbsp;Greeting</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/contact">  <i class="fa fa-phone" aria-hidden="true"></i> &nbsp; Contact</a>
+    </li>
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/about">  <i class="fa fa-info" aria-hidden="true"></i> &nbsp; About</a>
+    </li>
+      
+    @if(!user)
+
+
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/SignUpUser">
+        <i class="fa fa-user" aria-hidden="true"></i> &nbsp;  Sign Up</a>
+    </li>
+
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/SignInUser">
+        <i class="fa fa-sign-in" aria-hidden="true"></i> &nbsp;  Sign In</a>
+    </li>
+
+    @endif
+
+    @if(user != "")
+    
+    <li class="nav-item pr-3">
+      <a class="nav-link" href="/logout">
+        Sign out
+      </a>
+    </li>
+
+    @endif
+</ul>
   <hr><a href="/help"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Help & Support</a>
   <hr><a href="/FPBusiness"> <i class="fa fa-key" aria-hidden="true"></i> &nbsp;Password</a>
   <hr><a href="/deactivateBusinessAcc"><i class="fa fa-ban" aria-hidden="true"></i> &nbsp;Deactivate</a>
+  <hr>
+</div>
+
+<div id="mySidenav3" class="sidenav bg-dark text-light">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav3()">&times;</a>
+  <hr>
+  <ul class="navbar-nav ml-4">
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> &nbsp; Home</a>
+        </li>
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/invitationCreate"> <i class="fa fa-envelope-open" aria-hidden="true"></i> &nbsp; Invitation</a>
+        </li>
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/greetingCreate">  <i class="fa fa-envelope-open-o" aria-hidden="true"></i> &nbsp;Greeting</a>
+        </li>
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/contact">  <i class="fa fa-phone" aria-hidden="true"></i> &nbsp; Contact</a>
+        </li>
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/about">  <i class="fa fa-info" aria-hidden="true"></i> &nbsp; About</a>
+        </li>
+          
+        @if(!user)
+
+
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/SignUpUser">
+            <i class="fa fa-user" aria-hidden="true"></i> &nbsp;  Sign Up</a>
+        </li>
+
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/SignInUser">
+            <i class="fa fa-sign-in" aria-hidden="true"></i> &nbsp;  Sign In</a>
+        </li>
+
+        @elseif(user == "user")
+      
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/profileUser">
+            {{ userData.email }} </a>
+        </li>
+        
+        @elseif(user == "business")
+
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/profileBusiness">
+            {{ userData.email }}
+          </a>
+        </li>
+        
+        @endif
+
+        @if(user != "")
+        
+        <li class="nav-item pr-3">
+          <a class="nav-link" href="/logout">
+            Sign out
+          </a>
+        </li>
+
+        @endif
+  </ul>
+  <a href="/help"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; Help & Support</a>
+  <a href="/FPUser"> <i class="fa fa-key" aria-hidden="true"></i> &nbsp;Password</a>
   <hr>
 </div>
 
@@ -341,6 +494,12 @@
   function closeNav2() {
     document.getElementById("mySidenav2").style.width = "0";
   }
+  function openNav3() {
+    document.getElementById("mySidenav3").style.width = "200px";
+  }
+  function closeNav3() {
+    document.getElementById("mySidenav3").style.width = "0";
+  }
 </script>  
 
   <nav class="navbar navbar-expand-lg navbar-primary bg-dark fixed-top">
@@ -349,6 +508,8 @@
     <span class="text-white mr-2 ml-2 pl-3 pr-3" style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776;</span>
     @elseif(user=="business")
     <span class="text-white mr-2 ml-2 pl-3 pr-3" style="font-size:30px;cursor:pointer;" onclick="openNav2()">&#9776;</span>
+    @else
+    <span class="text-white mr-2 ml-2 pl-3 pr-3" style="font-size:30px;cursor:pointer;" onclick="openNav3()">&#9776;</span>
     @endif
 
     <a class="navbar-brand d-lg-none text-light" href="/">MeelIndia</a>
@@ -373,86 +534,86 @@
       <a class="navbar-brand d-none d-lg-block text-light" style="font-size:1rem;" href="/"> MeelIndia   </a>
 
       <ul class="navbar-nav">
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/invitationCreate">Invitation</a>
-        </li>
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/greetingCreate">Greeting</a>
-        </li>
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/contact">Contact</a>
-        </li>
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <!--
-        
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/services">
-            Services 
-          </a>
-        </li>
-        
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/businessData">
-            Business </a>
-        </li>
-      -->
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/invitationCreate">Invitation</a>
+            </li>
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/greetingCreate">Greeting</a>
+            </li>
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/contact">Contact</a>
+            </li>
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/about">About</a>
+            </li>
+            <!--
+            
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/services">
+                Services 
+              </a>
+            </li>
+            
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/businessData">
+                Business </a>
+            </li>
+          -->
+              
+            @if(!user)
+
+            <!--
+            <li class="nav-item pr-3" data-toggle="modal" data-target="#signUpModal">
+              <a class="nav-link" href="#">
+                Sign Up</a>
+            </li>
+
+            <li class="nav-item pr-3" data-toggle="modal" data-target="#signInModal">
+              <a class="nav-link" href="#">
+                Sign In</a>
+            </li>
+            
+          -->
+
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/SignUpUser">
+                Sign Up</a>
+            </li>
+
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/SignInUser">
+                Sign In</a>
+            </li>
+
+            @elseif(user == "user")
           
-        @if(!user)
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/profileUser">
+                {{ userData.email }} </a>
+            </li>
+            
+            @elseif(user == "business")
 
-        <!--
-        <li class="nav-item pr-3" data-toggle="modal" data-target="#signUpModal">
-          <a class="nav-link" href="#">
-             Sign Up</a>
-        </li>
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/profileBusiness">
+                {{ userData.email }}
+              </a>
+            </li>
+            
+            @endif
 
-        <li class="nav-item pr-3" data-toggle="modal" data-target="#signInModal">
-          <a class="nav-link" href="#">
-             Sign In</a>
-        </li>
-        
-      -->
+            @if(user != "")
+            
+            <li class="nav-item pr-3">
+              <a class="nav-link" href="/logout">
+                Sign out
+              </a>
+            </li>
 
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/SignUpUser">
-             Sign Up</a>
-        </li>
-
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/SignInUser">
-             Sign In</a>
-        </li>
-
-        @elseif(user == "user")
-       
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/profileUser">
-            {{ userData.email }} </a>
-        </li>
-         
-        @elseif(user == "business")
-
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/profileBusiness">
-            {{ userData.email }}
-          </a>
-        </li>
-        
-        @endif
-
-        @if(user != "")
-        
-        <li class="nav-item pr-3">
-          <a class="nav-link" href="/logout">
-            Sign out
-          </a>
-        </li>
-
-        @endif
+            @endif
       </ul>
     </div>
   </nav>
