monile view app bar integrated with nav

--- a/views/profileUser.edge
+++ b/views/profileUser.edge
@@ -165,7 +165,7 @@
 
     <div class="container-fluid">
         <div class="row p-2" style="margin-bottom:55px;">
-            <div class="col-md-3 offset-md-1 pt-3 pb-3 text-center shadowme bg-light">
+            <div class="col-md-3 offset-md-1 pt-3 pb-3 mb-3 text-center shadowme bg-light">
                 <div class="col-md-12 text-center">{{ userData.email }}  <br>
                     <img src="{{userData.image}}" class="img rounded" width="50px" alt="">
                 
